--- a/wp_ChatUp!/MainPage.xaml
+++ b/wp_ChatUp!/MainPage.xaml
@@ -29,7 +29,7 @@
             </PivotItem>
             <PivotItem x:Name="pvt_rooms" Header="Rooms">
                 <Grid>
-                    <ComboBox x:Name="cb_languages" PlaceholderText="Language selection..." VerticalAlignment="Top" Margin="0,22,10,0">
+                    <ComboBox x:Name="cb_languages" PlaceholderText="Language selection..." VerticalAlignment="Top" Margin="0,22,10,0" SelectionChanged="cb_languages_SelectionChanged">
                         <ComboBoxItem Content="Dutch"/>
                         <ComboBoxItem Content="English"/>
                         <ComboBoxItem Content="French"/>
@@ -37,7 +37,7 @@
                         <ComboBoxItem Content="Italian"/>
                         <ComboBoxItem Content="Indian"/>
                     </ComboBox>
-                    <ListView Margin="0,93,10,10">
+                    <ListView x:Name="lv_rooms" Margin="0,93,10,10">
                         <ListViewItem Content="Testroom1"/>
                         <ListViewItem Content="Testroom2"/>
                     </ListView>
